<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clParent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivService"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:src="@drawable/default_circle_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/name"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@+id/ivService"
            app:layout_constraintBottom_toBottomOf="@+id/ivService"
            app:layout_constraintStart_toEndOf="@+id/ivService"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/ivService"
            app:layout_constraintStart_toStartOf="@id/ivService"
            app:layout_constraintEnd_toEndOf="@id/tvName"/>

        <TextView
            android:id="@+id/tvCaption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/caption"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tvPrice"
            app:layout_constraintStart_toStartOf="@id/tvPrice"
            app:layout_constraintEnd_toEndOf="@id/tvPrice"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>